
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int bashargv ;
 int bashenvp ;
 int execve (char*,int ,int ) ;
 int fatal (char*) ;
 scalar_t__ geteuid () ;
 int setresgid (int ,int ,int ) ;
 int setresuid (int ,int ,int ) ;

void prepare(void)
{
    if (geteuid() == 0)
    {
  setresuid(0, 0, 0);
  setresgid(0, 0, 0);
        execve("/bin/sh", bashargv, bashenvp);
        fatal("[-] Unable to spawn shell");
    }
}
