; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_1397.c_prepare.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_1397.c_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"/bin/sh\00", align 1
@bashargv = common dso_local global i32 0, align 4
@bashenvp = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"[-] Unable to spawn shell\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prepare() #0 {
  %1 = call i64 (...) @geteuid()
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = call i32 @setresuid(i32 0, i32 0, i32 0)
  %5 = call i32 @setresgid(i32 0, i32 0, i32 0)
  %6 = load i32, i32* @bashargv, align 4
  %7 = load i32, i32* @bashenvp, align 4
  %8 = call i32 @execve(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %7)
  %9 = call i32 @fatal(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %10

10:                                               ; preds = %3, %0
  ret void
}

declare dso_local i64 @geteuid(...) #1

declare dso_local i32 @setresuid(i32, i32, i32) #1

declare dso_local i32 @setresgid(i32, i32, i32) #1

declare dso_local i32 @execve(i8*, i32, i32) #1

declare dso_local i32 @fatal(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
